--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <img src="./images/illustration-woman-online-mobile.svg" alt="" />
     <div class="container">
       <h1 class="faq">FAQ</h1>
+      <div class="one tab"></div>
+      <div class="two tab"></div>
+      <div class="three tab"></div>
+      <div class="four tab"></div>
+      <div class="five tab"></div>
       <!-- How many team members can I invite? You can invite up to 2 additional
       users on the Free plan. There is no limit on team members for the Premium
       plan. What is the maximum file upload size? No more than 2GB. All files in
@@ -41,5 +46,10 @@
       questions asked. Do you provide additional support? Chat and email support
       is available 24/7. Phone lines are open during normal business hours. -->
     </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
+
+How are we going to do this? On hover the text needs to turn orange When one
+question is clicked, the others are closed. Div hidden?
